--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
     "deploy": "npx hardhat run scripts/deploy.ts --network ropsten",
-    "startLocalBlockchain": "npx hardhat node"
+    "startLocalBlockchain": "npx hardhat node",
+    "startFrontend" : "cd ./frontend && npm run start"
   },
   "repository": {
     "type": "git",
